Initial consolidation of Vi-Cell_BLU and Shepherd CellHealth code into V-Cell_Common.

--- a/ScoutUtilities/UIConfiguration/ui.config
+++ b/ScoutUtilities/UIConfiguration/ui.config
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
+<!-- NOTE: This file MUST be kept synchronized with the offline SDK simulation version of this file at HawkeyeApplicationSource\Installer\SW_Install\Software\ui.config.sdk -->
+<!--       Any additions or deletions to this file MUST be mirrored in the SDK variant of the file. -->
+<!--       DO NOT change the simulation-related values 'useWindowedMode' or 'overrideEssVcrControls'! in the SDK variant -->
 <configuration>
   <configSections>
     <section name="uiConfiguration" type="ScoutUtilities.UIConfiguration.UIConfigurationSettings, ScoutUtilities" allowLocation="true" allowDefinition="Everywhere" />
